<resources>
    <string name="app_name">PortfolioProject</string>
    <string name="accounts">Accounts</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="add_account">Add Account</string>
    <string name="transactions">Transactions</string>
    <string name="update">Update</string>
    <string-array name="dropdown_items">
        <item>Withdrawal</item>
        <item>Deposit</item>
        <!-- Add more options as needed -->
    </string-array>
</resources>