<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_accounts"
        android:icon="@drawable/ic_accounts"
        android:visible="true"
        android:title="@string/accounts" />
    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_transactions"
        android:visible="true"
        android:title="@string/transactions"/>
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:visible="true"
        android:title="@string/profile" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:visible="true"
        android:title="@string/settings" />

</menu>
